# shrink-epub

./: README.md  main.py  pyproject.toml
