[project]
name = "shrink-epub"
version = "1.0.0"
authors = [{name = "Amit Srivastava", email = "daoofcoding@proton.me"}]
description = "Reduce EPUB file size by converting internal images to WebP format."
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "pillow>=12.2.0",
]
